--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,31 +15,37 @@
 <!-- Main content container -->
 <div class="container" id="top">
   <div class="row">
-    <div class="col s12 m8 flex" id="top">
+    <div class="col s12 amber accent-4 comments-large">
+      <div class="row padd">
+        <div class="col s12 m4">
+          <form class="black-text black-border padd">
+            <h5 id="article-title" data-id="">New Comment</h5>
+            <div class="input-field">
+              <input id="name" type="text">
+              <label for="name">Name</label>
+            </div>
+            <div class="input-field">
+              <textarea id="body" class="materialize-textarea"></textarea>
+              <label for="body">Type your comment here</label>
+            </div>
+            <button type="submit" id="submit" class="btn cyan darken-4 disabled">Submit</button>
+          </form>
+        </div>
+        <div class="col s12 m8">
+          <div class="scroll" id="comments-here">
+            {{#each comments}}
+            {{>comments/comments-block}}
+            {{/each}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s12 flex" id="top">
       {{#each articles}}
       {{>articles/article-block}}
       {{/each}}
-    </div>
-    <div class="col s12 m4 amber accent-4 comments-large ">
-      <h4 id="article-title" data-id=""></h4>
-      <div class="divider"></div>
-      <form class="black-text">
-        <div class="input-field">
-          <input id="name" type="text">
-          <label for="name">Name</label>
-        </div>
-        <div class="input-field">
-          <textarea id="body" class="materialize-textarea"></textarea>
-          <label for="body">Type your comment here</label>
-        </div>
-        <button type="submit" id="submit" class="btn cyan darken-4 disabled">Submit</button>
-      </form>
-      <div class="divider"></div>
-      <div class="scroll" id="comments-here">
-        {{#each comments}}
-          {{>comments/comments-block}}
-        {{/each}}
-      </div>
     </div>
   </div>
 </div>
